// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> error renders 1`] = `
<div
  class="field field--touched field--problem field--populated field--check field--switch"
>
  <button
    aria-checked="false"
    aria-describedby="form-0_mock--error"
    aria-label="Off"
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--touched field__input--problem field__input--populated field__input--check field__input--switch"
    id="form-0_mock"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--touched field__label--problem field__label--populated field__label--check field__label--switch"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <span
    class="message message--problem"
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Switch /> help renders 1`] = `
<div
  class="field field--populated field--check field--switch"
>
  <button
    aria-checked="false"
    aria-label="Off"
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--populated field__input--check field__input--switch"
    id="form-0_mock"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--populated field__label--check field__label--switch"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
    <span
      class="field__help field__help--populated field__help--check field__help--switch"
    >
      Help
    </span>
  </label>
</div>
`;

exports[`<Switch /> label renders 1`] = `
<div
  class="field field--populated field--check field--switch"
>
  <button
    aria-checked="false"
    aria-label="Off"
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--populated field__input--check field__input--switch"
    id="form-0_mock"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--populated field__label--check field__label--switch"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Label
  </label>
</div>
`;

exports[`<Switch /> renders 1`] = `
<div
  class="field field--populated field--check field--switch"
>
  <button
    aria-checked="false"
    aria-label="Off"
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--populated field__input--check field__input--switch"
    id="form-0_mock"
    role="switch"
    type="button"
  />
  <label
    class="field__label field__label--populated field__label--check field__label--switch"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
</div>
`;
